# winterns

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PR_REVIEW.md  README.md  REVIEW_EXECUTION.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  README.md  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 503540cb768b_add_timezone_to_winterns_next_run_at.py  a49b3704319d_add_timezone_to_datetime_columns.py  c457ebc25e76_initial_schema.py
apps/api/src/wintern/: __init__.py  main.py
apps/api/src/wintern/agents/: __init__.py  composer.py  curator.py  interpreter.py
apps/api/src/wintern/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
apps/api/src/wintern/core/: __init__.py  config.py  database.py
apps/api/src/wintern/delivery/: __init__.py  base.py  schemas.py  slack.py
apps/api/src/wintern/execution/: __init__.py  executor.py  factories.py  models.py  router.py  scheduler.py  schemas.py  service.py
apps/api/src/wintern/sources/: __init__.py  base.py  brave.py  reddit.py  schemas.py
apps/api/src/wintern/winterns/: __init__.py  models.py  router.py  schemas.py  service.py
apps/api/tests/: __init__.py  conftest.py  test_auth.py  test_brave.py  test_composer.py  test_curator.py  test_execution_integration.py  test_execution_service.py  test_executor.py  test_factories.py  test_health.py  test_interpreter.py  test_reddit.py  test_scheduler.py  test_slack_delivery.py  test_winterns.py
apps/web/: .env.example  .gitignore  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx
apps/web/src/components/: DashboardSkeleton.tsx  ProtectedRoute.tsx  WinternCard.tsx
apps/web/src/contexts/: AuthContext.tsx
apps/web/src/hooks/: useAuth.ts
apps/web/src/lib/: api.test.ts  api.ts  auth.ts  utils.test.ts  utils.ts
apps/web/src/pages/: AuthCallbackPage.tsx  DashboardPage.tsx  HealthPage.tsx  HomePage.tsx  LoginPage.tsx  (+2 more)
infrastructure/: docker-compose.yml
(+15 files in other folders)
