[project]
name = "wintern"
version = "0.1.0"
description = "AI-powered web research agents"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # HTTP client
    "httpx>=0.28.0",
    # Auth
    "fastapi-users[sqlalchemy,oauth]>=14.0.0",
    "python-jose[cryptography]>=3.3.0",
    # Logging
    "structlog>=24.4.0",
    # AI
    "pydantic-ai>=0.0.39",
    # Scheduling
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wintern"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "PT", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["wintern"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
